--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd {
+	background-color: #FFA7A7;
+  font-family: "Verdana", "DejaVu Sans", sans-serif;
+}
+
+.big {
+  font-size: 24px;
+}
+
+#special {
+	color: #001EFF;
+	font-size: 36px;
+}
+
+#unique {
+	background-color: #80FF80;
+	font-size: 24px;
+	font-weight: bold;
+}
