--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,4 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .header  {
+  display: flex;
+  postion: sticky;
+  top: 0;
+  justify-content: center;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
 }
@@ -9,17 +19,24 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 8px auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+}
+
+li {
+  margin: 4px;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 4px;
   /* this removes the line under the links */
   text-decoration: none;
 }
