--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -5,6 +5,10 @@ html {
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 15px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -12,6 +16,7 @@ html {
 }
 
 .container div {
+  display: grid;
   padding: 15px;
   font-size: 32px;
   font-family: Helvetica;
@@ -22,22 +27,31 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1;
+  grid-row: 2 / 7;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 3;
+  grid-row: 2;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 2 / 3;
+  grid-row: 3 / 7;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  grid-row: 7;
 }
 
 .article p {
