--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -3,8 +3,18 @@
   padding: 0;
 }
 
+ul {
+  list-style: none;
+  display: grid;
+}
+
 .container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 128px 64px 1fr 48px;
+  gap: 4px;
   text-align: center;
+  height: 100vh;
 }
 
 .container div {
@@ -16,15 +26,31 @@
 }
 
 .header {
+  grid-row: 1;
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   background-color: #393f4d;
+  align-items: center;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.nav ul,
+.nav li {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .sidebar {
+  grid-row: 2 / 4;
+  grid-column: 1;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
   background-color: #C50208;
 }
 
@@ -36,16 +62,26 @@
   border-radius: 10px;
 }
 
+.photo {
+  display: grid;
+  align-items: center;
+}
 
 .sidebar .side-content {
   background-color: white;
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-items: center;
 }
 
 .nav {
+  grid-row: 2;
+  grid-column: 2;
+  display: grid;
   background-color: #C50208;
+  align-items: center;
 }
 
 .nav ul li {
@@ -54,6 +90,11 @@
 }
 
 .article {
+  grid-row: 3;
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
   background-color: #bccbde;
 }
 
@@ -68,6 +109,9 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
+  display: grid;
+  align-items: center;
 }
 
 .card p {
@@ -82,6 +126,8 @@
 }
 
 .footer {
+  grid-row: 4;
+  grid-column: 1 / 4;
   background-color: #393f4d;
 }
 
